--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "sass": "^1.26.9",
     "typescript": "^3.9.5"
   },
   "scripts": {
